--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 {% endif %}
 
 {% if not ogType is defined %}
-    {% set ogType = 'blog' %}
+    {% set ogType = 'website' %}
 {% endif %}
 
 {% if not ogTitle is defined %}
@@ -23,11 +23,11 @@
 {% endif %}
 
 {% if not ogDescription is defined %}
-    {% set ogDescription = title %}
+    {% set ogDescription = meta_description %}
 {% endif %}
 
 {% if not ogImage is defined %}
-    {% set ogImage = asset('preview.png') %}
+    {% set ogImage = absolute_url(asset('preview.png')) %}
 {% endif %}
 
 <!DOCTYPE html>
@@ -46,6 +46,7 @@
     <meta property="og:title" content="{{ ogTitle }}">
     <meta property="og:image" content="{{ ogImage }}">
     <meta property="og:description" content="{{ ogDescription }}">
+    <meta property="fb:app_id" content="1376605832728926">
     {# <link rel="shortcut icon" href="favicon.ico"> #}
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163364401-1"></script>
