--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 {% endif %}
 
 {% if not meta_description is defined %}
-    {% set meta_description = 'Nos dedicamos a crear y gestionar proyectos de software de código abierto.' %}
+    {% set meta_description = 'slogan'|trans %}
 {% endif %}
 
 {% if not ogUrl is defined %}
