--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -49,25 +49,25 @@
             </div>
         </div>
     {% endif %}
-
-    {% if not translations_menu is empty %}
-        <div class="row">
-            <div class="col">
-                <div class="wrapper-content section-menu">
-                    <ul class="list-unstyled">
-                        {% for item in translations_menu %}
-                            <li><a href="{{ item.url }}">{{ item.text }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-    {% endif %}
 {% endblock %}
 
 {% block right_sidebar %}
     <div class="wrapper-content docs-content">
+        {% if not translations_menu is empty %}
+            <div class="row">
+                <div class="col">
+                    <div style="float: right; margin-bottom: 20px">
+                        {{ 'Translations'|trans }}
+                        {% for item in translations_menu %}
+                            <a href="{{ item.url }}">{{ item.text }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+
         <h1 class="title text-center">{{ contentTitle }}</h1>
+
         {{ content|raw }}
 
         <div class="row">
