--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -24,11 +24,7 @@
             <h2 class="title">ThenLabs<span class="highlight"></span></h2>
             <p class="intro">{{ 'slogan'|trans }}</p>
             <div class="btns">
-                {% if route_parameters._locale == 'en' %}
-                    <a class="btn btn-cta-secondary" href="{{ path('page', {slug: 'about' }) }}">{{ 'Learn more'|trans }}</a>
-                {% elseif route_parameters._locale == 'es' %}
-                    <a class="btn btn-cta-secondary" href="{{ path('page', {slug: 'conozcanos' }) }}">{{ 'Learn more'|trans }}</a>
-                {% endif %}
+                <a class="btn btn-cta-secondary" href="{{ path('about') }}">{{ 'Learn more'|trans }}</a>
             </div>
             <ul class="meta list-inline">
                 <li class="list-inline-item">
