--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -69,7 +69,7 @@
                         </div>
                         <p>{{ 'project.description.composed_views'|trans }}</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
+                            <a href="{{ path('doc', { project: 'composed-views', branch: 'master', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -84,7 +84,7 @@
                         </div>
                         <p>{{ 'project.description.pyramidal_tests'|trans }}</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'pyramidal-tests', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
+                            <a href="{{ path('doc', { project: 'pyramidal-tests', branch: 'master', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -97,7 +97,7 @@
                         </div>
                         <p>{{ 'project.description.components'|trans }}</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'components', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
+                            <a href="{{ path('doc', { project: 'components', branch: 'master', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -112,7 +112,7 @@
                         </div>
                         <p>{{ 'project.description.class_builder'|trans }}</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'class-builder', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
+                            <a href="{{ path('doc', { project: 'class-builder', branch: 'master', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -125,7 +125,7 @@
                         </div>
                         <p>{{ 'project.description.then_cli'|trans }}</p>
                         <div>
-                            <a href="{{ path('docs', { project: 'cli', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
+                            <a href="{{ path('doc', { project: 'cli', branch: 'master', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
