--- a/templates/devAid/layout-sidebar.html.twig
+++ b/templates/devAid/layout-sidebar.html.twig
@@ -16,7 +16,7 @@
 
                     <div class="row">
                         <div class="col text-center" style="padding: 20px 0">
-                            <a href="https://a-ads.com?partner=1399531">Insertar un anuncio aquí</a>
+                            <a href="https://a-ads.com?partner=1399531">{{ 'Insert ad here'|trans }}</a>
                         </div>
                     </div>
                 </div>
