--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -65,7 +65,7 @@
 
 {% block body %}
     <!-- ******HEADER****** -->
-    <header id="header" class="header">
+    <header id="header" class="header" style="z-index: 10">
         <div class="container">
             <h1 class="logo float-left">
                 <a class="" href="{{ path('index') }}">
