--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -18,7 +18,7 @@
         {
             'li_class': 'nav-item',
             'a_class' : 'nav-link',
-            'href'    : path('index') ~ '#blog',
+            'href'    : path('blog'),
             'text'    : 'Blog'|trans,
         },
         {
