--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -1,5 +1,5 @@
 
-{% extends 'devAid/layout-sidebar.html.twig' %}
+{% extends 'devAid/layout-left-sidebar.html.twig' %}
 
 {% block styles %}
     {{ parent() }}
