--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -170,6 +170,10 @@
 
                 </div><!--//items-wrapper-->
             </div>
+
+            <div class="pt-5 text-center">
+                <a class="btn btn-primary theme-btn font-weight-bold" href="{{ path('blog') }}">{{ 'see_the_whole_blog'|trans }}</a>
+            </div>
         </div><!--//container-->
 
     </section>
