--- a/templates/devAid/page-blog.html.twig
+++ b/templates/devAid/page-blog.html.twig
@@ -1,5 +1,5 @@
 
-{% extends 'devAid/layout-left-sidebar.html.twig' %}
+{% extends 'devAid/layout-sidebar.html.twig' %}
 
 {% block right_sidebar %}
     <div class="docs-inner">
