--- a/templates/devAid/includes/footer.html.twig
+++ b/templates/devAid/includes/footer.html.twig
@@ -31,6 +31,13 @@
 <!-- ******FOOTER****** -->
 <footer class="footer">
     <div class="container text-center">
+
+        <div class="row">
+            <div class="col">
+                <iframe data-aa="1428048" src="//ad.a-ads.com/1428048?size=728x90" scrolling="no" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+            </div>
+        </div>
+
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
         <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
     </div><!--//container-->
