--- a/templates/devAid/page-doc.html.twig
+++ b/templates/devAid/page-doc.html.twig
@@ -10,3 +10,7 @@
         </div>
     </div>
 {% endblock %}
+
+{% block after_content %}
+    {% include 'devAid/includes/ads/after-content.html.twig' %}
+{% endblock %}
