--- a/templates/content/about-en.html.twig
+++ b/templates/content/about-en.html.twig
@@ -4,4 +4,8 @@
 
 <p>Open source software projects are kept by communities of users generally. In our case, we have this kind of projects and we aspire to create an organization aroud this topic.</p>
 
-<p>You can find all our projects in our home page. As we said preeviously, some of them were created in the past but because of we think them could be useful we dicided to picked it up and we will create new versions of them soon. We have created social networks profiles to keep an active communication. There we will be sharing our news, articles, projects, etc. You can keep up to date following us in our social networks.</p>
+<p>You can find all our projects in our home page. As we said preeviously, some of them were created in the past but because of we think them could be useful we dicided to picked it up and we will create new versions of them soon.</p>
+
+<p>We have created social networks profiles to keep an active communication. There we will be sharing our news, articles, projects, etc. You can keep up to date following us in our social networks.</p>
+
+{% include 'content/includes/about-links.html.twig' %}
