--- a/templates/content/about-es.html.twig
+++ b/templates/content/about-es.html.twig
@@ -7,3 +7,5 @@
 <p>En la página principal usted puede encontrar todos nuestros proyecto. Como dijimos anteriormente, algunos fueron creados en el pasado pero dado que consideramos que los mismos tienen ciertas utilidades hemos decidido retomarlos y próximamente estaremos creando nuevas versiones de los mismos.</p>
 
 <p>Con el objetivo de mantener una comunicación activa hemos creados varios perfiles en redes sociales donde estaremos compartiendo todas nuestras noticias, artículos, proyectos, etc. Si desea mantenerse informado puede suscribirse a las mismas usando los enlaces que encontrará en la página principal.</p>
+
+{% include 'content/includes/about-links.html.twig' %}
