--- a/templates/devAid/page-blog-post.html.twig
+++ b/templates/devAid/page-blog-post.html.twig
@@ -22,5 +22,5 @@
         <div class="fb-share-button" data-href="{{ path('blogPost', {slug: blogPost.slug}) }}" data-layout="button_count"></div>
     </p>
 
-    {% include 'devAid/includes/ads/after-content.html.twig' %}
+    {# {% include 'devAid/includes/ads/after-content.html.twig' %} #}
 {% endblock %}
