--- a/templates/devAid/page-doc.html.twig
+++ b/templates/devAid/page-doc.html.twig
@@ -12,5 +12,5 @@
 {% endblock %}
 
 {% block after_content %}
-    {% include 'devAid/includes/ads/after-content.html.twig' %}
+    {# {% include 'devAid/includes/ads/after-content.html.twig' %} #}
 {% endblock %}
