--- a/templates/devAid/includes/ads/footer.html.twig
+++ b/templates/devAid/includes/ads/footer.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row d-none d-sm-block">
     <div class="col">
         <iframe data-aa="1428048" src="//ad.a-ads.com/1428048?size=728x90" scrolling="no" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
     </div>
