--- a/templates/devAid/includes/ads/footer.html.twig
+++ b/templates/devAid/includes/ads/footer.html.twig
@@ -1,4 +1,10 @@
-<div class="row d-none d-sm-block">
+<div class="row d-block d-md-none d-lg-none d-xl-none">
+    <div class="col">
+        <iframe data-aa="1429995" src="//ad.a-ads.com/1429995?size=320x100" scrolling="no" style="width:320px; height:100px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+    </div>
+</div>
+
+<div class="row d-none d-md-block d-lg-block d-xl-block">
     <div class="col">
         <iframe data-aa="1428048" src="//ad.a-ads.com/1428048?size=728x90" scrolling="no" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
     </div>
