--- a/templates/devAid/page-doc.html.twig
+++ b/templates/devAid/page-doc.html.twig
@@ -5,7 +5,10 @@
     <div class="row">
         <div class="col">
             <div style="float: right; margin-bottom: 20px">
-                <a href="{{ url_doc }}" target="_blank">{{ 'improve_this_doc'|trans }}</a>
+                <a href="{{ url_doc }}" target="_blank">
+                    <i class="far fa-edit"></i>
+                    {{ 'improve_this_doc'|trans }}
+                </a>
             </div>
         </div>
     </div>
