--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,7 +50,7 @@
     <meta property="og:image" content="{{ ogImage }}">
     <meta property="og:description" content="{{ ogDescription }}">
     <meta property="fb:app_id" content="{{ facebook_app_id }}">
-    {# <link rel="shortcut icon" href="favicon.ico"> #}
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_analytics_id }}"></script>
     <script>
