--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -118,4 +118,5 @@
     <script type="text/javascript" src="{{ asset('devAid/plugins/jquery-scrollTo/jquery.scrollTo.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('devAid/plugins/prism/prism.js') }}"></script>
     <script type="text/javascript" src="{{ asset('devAid/js/main.js') }}"></script>
+    <script type="text/javascript" src="https://blockchain.info/Resources/js/pay-now-button.js"></script>
 {% endblock %}
