--- a/templates/content/donate-en.html.twig
+++ b/templates/content/donate-en.html.twig
@@ -1,7 +1,9 @@
-<p>At ThenLabs we have the chimera of becoming an entire organization dedicated to producing open source software.</p>
+<p>ThenLabs has been created with the chimera of becoming an organization devoted to produce open source software.</p>
 
-<p>So far we have done a lot of work and it is something that can be verified from our <a href="{{ path('index') }}">website</a>, <a href="{{ path('index') }}#socials">social networks</a>, <a href="https://github.com/thenlabs">GitHub</a>, etc. We have done everything in our spare time because ThenLabs has not been our source of employment.</p>
+<p>So far we have worked very hard, something that can be checked from our <a href="{{ path('index') }}" target="_blank">website</a>, <a href="{{ path('index') }}#socials" target="_blank">social networks</a>, <a href="https://github.com/thenlabs" target="_blank">GitHub</a>, etc. Everything has been done in our spare time since ThenLabs is not a source of employment at all.</p>
 
-<p>However, lately free time is no longer enough to continue moving at the required speed, and for this reason, we have enabled the possibility of receiving monetary donations in order to dedicate more time to the project in general.</p>
+<p>However, when it comes to free time, it has not been enough lately to make as much progress as we would have wished to.</p>
 
-<p>Given our commitment to open source we aspire to be financed with cryptocurrencies and at the moment we only have the possibility of receiving bitcoins.</p>
+<p>Therefore, the possibility of receiving monetary donations has been enabled for us to devote more time to the Project in general.</p>
+
+<p>Given our commitment to the open source, we aspire to be financed through cryptocurrency althoug for now we only have the option of receiving bitcoins.</p>
