--- a/templates/content/donate-es.html.twig
+++ b/templates/content/donate-es.html.twig
@@ -1,7 +1,7 @@
 <p>En ThenLabs tenemos la quimera de convertirnos en toda una organización dedicada a producir software de código abierto.</p>
 
-<p>Hasta el momento hemos realizado muchísimo trabajo y es algo que se puede comprobar desde nuestro <a href="{{ path('index') }}">sitio web</a>, <a href="{{ path('index') }}#socials">redes sociales</a>, <a href="https://github.com/thenlabs">GitHub</a>, etc. Todo lo hemos realizado en nuestro tiempo libre porque ThenLabs no ha sido nuestra fuente de empleo.</p>
+<p>Hasta el momento hemos realizado muchísimo trabajo y es algo que se puede comprobar desde nuestro <a href="{{ path('index') }}" target="_blank">sitio web</a>, <a href="{{ path('index') }}#socials" target="_blank">redes sociales</a>, <a href="https://github.com/thenlabs" target="_blank">GitHub</a>, etc. Todo lo hemos realizado en nuestro tiempo libre porque ThenLabs no ha sido nuestra fuente de empleo.</p>
 
-<p>No obstante, últimamente el tiempo libre nos deja de ser suficiente para seguir avanzando a la velocidad requerida, y por ese motivo, hemos habilitado la posibilidad de recibir donaciones monetarias con el objetivo de dedicar más tiempo al proyecto en general.</p>
+<p>No obstante, últimamente el tiempo libre no nos deja seguir avanzando a la velocidad requerida, y por ese motivo, hemos habilitado la posibilidad de recibir donaciones monetarias con el objetivo de dedicar más tiempo al proyecto en general.</p>
 
 <p>Dado nuestro compromiso con el open source aspiramos a ser financiados con criptomonedas y por el momento solo tenemos la posibilidad de recibir bitcoins.</p>
